Minimum number of coins

--- a/DSA.ipynb
+++ b/DSA.ipynb
@@ -18,8 +18,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question about how many coins of each value should it use or give as change\n",
-    "\n"
+    "### Question about how many coins of each value should it use or give as change"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Minimum number of coins\n",
+    "\n",
+    "Chef has infinite coins in denominations of rupees 5 and rupees 10.\n",
+    "\n",
+    "Find the minimum number of coins Chef needs, to pay exactly X rupees. If it is impossible to pay X rupees in denominations of rupees 5 and 10 only, print -1.\n",
+    "\n",
+    "Input Format<br>\n",
+    "First line will contain T, number of test cases. Then the test cases follow.\n",
+    "Each test case contains of a single integer X.\n",
+    "\n",
+    "Output Format\n",
+    "\n",
+    "For each test case, print a single integer - the minimum number of coins Chef needs, to pay exactly X rupees. If it is impossible to pay X rupees in denominations of rupees 5 and 10 only, print -1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=77\n",
+    "\n",
+    "a=10\n",
+    "b=7\n",
+    "\n",
+    "bigger = max(a,b)\n",
+    "minor = min(a,b)\n",
+    "\n",
+    "if x%bigger == 0 or x%minor == 0:\n",
+    "    print(x//bigger + (x%bigger)//minor)\n",
+    "else:\n",
+    "    print(-1) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Key takeway\n",
+    "The important part here is to get that the number need to be divisible by the two coins. This is the only case qhere it is impossible."
    ]
   },
   {
@@ -29,8 +83,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
