mod theory and examples

--- a/DSA.ipynb
+++ b/DSA.ipynb
@@ -18,7 +18,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question about how many coins of each value should it use or give as change"
+    "![](mod4_example.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Questions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question about how many coins of each value should it use or give as change"
    ]
   },
   {
@@ -72,13 +86,238 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Key takeway\n",
+    "##### Key takeway\n",
     "The important part here is to get that the number need to be divisible by the two coins. This is the only case qhere it is impossible."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### Questions about digits\n",
+    "\n",
+    "> You should take care of negative numbers!!\n",
+    "\n",
+    "1. String trick"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = -12345\n",
+    "\n",
+    "# trick to fix negative number\n",
+    "n = n if n>0 else n*-1 \n",
+    "\n",
+    "n_list = [int(e) for e in str(n)]\n",
+    "n_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. / and %"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = -12345\n",
+    "\n",
+    "# trick to fix negative number\n",
+    "n = n if n>0 else n*-1 \n",
+    "\n",
+    "a = []\n",
+    "while n != 0:\n",
+    "    a.insert(0, n%10)\n",
+    "    n = int(n/10)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> This solutions with **while** didn't work with **negative** numbers because the mod of negatives numbers work different than positives."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-1%10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-1234%4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-123"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(-1234/10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-1234%10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. divmod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 12345\n",
+    "a = []\n",
+    "while n>0:\n",
+    "    q, r = divmod(n, 10)\n",
+    "    n = q\n",
+    "    a.insert(0, r)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Time convertions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 days, 3 hours, 46 minutes and 39 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_seconds = 186_399\n",
+    "seconds = total_seconds % 60\n",
+    "minutes = total_seconds // 60 % 60\n",
+    "hours = total_seconds // 60 // 60 % 24\n",
+    "days = total_seconds // 60 // 60 // 24\n",
+    "\n",
+    "print(f\"{days} days, {hours} hours, {minutes:02d} minutes and {seconds:02d} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
