--- a/DSA.ipynb
+++ b/DSA.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](mod4_example.png)"
+    "![](mod4_example.png)\n"
    ]
   },
   {
@@ -56,7 +56,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coin 13: 0\n",
+      "Coin 10: 0\n",
+      "Coin 3: 0\n",
+      "Total coins: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 77\n",
+    "coins = [13, 10, 3]\n",
+    "coins = sorted(coins, reverse=True)\n",
+    "\n",
+    "if any( [ x%c==0 for c in coins] ):\n",
+    "    total = 0\n",
+    "    rest = x\n",
+    "    coin_i = 0\n",
+    "    for i in range(len(coins)):\n",
+    "        if rest%coins[i] == 0:\n",
+    "            coin_i = rest//coins[i]\n",
+    "            rest = (rest%coins[i])\n",
+    "\n",
+    "        print(f\"Coin {coins[i]}: {coin_i}\")\n",
+    "        total += coin_i\n",
+    "    \n",
+    "    print( f\"Total coins: {total}\" )\n",
+    "else:\n",
+    "    print(-1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -77,6 +115,7 @@
     "minor = min(a,b)\n",
     "\n",
     "if x%bigger == 0 or x%minor == 0:\n",
+    "    #it works only with coins of 10 and less than 10\n",
     "    print(x//bigger + (x%bigger)//minor)\n",
     "else:\n",
     "    print(-1) "
@@ -87,7 +126,7 @@
    "metadata": {},
    "source": [
     "##### Key takeway\n",
-    "The important part here is to get that the number need to be divisible by the two coins. This is the only case qhere it is impossible."
+    "The important part here is to get that the number need to be divisible at least by one of the two coins. This is the only case where it is impossible."
    ]
   },
   {
@@ -159,7 +198,7 @@
     "a = []\n",
     "while n != 0:\n",
     "    a.insert(0, n%10)\n",
-    "    n = int(n/10)\n",
+    "    n = int(n/10) # we could use // because we fixed the negative number before. But, if we didn't fix the negative number, the floor division could return a differente number of the expected.\n",
     "a"
    ]
   },
@@ -445,11 +484,80 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Floor division\n",
+    "\n",
+    "The floor division of negative numbers could return a number that we are not expecting!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.4285714285714286, 1)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10/7, 10//7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-1.4285714285714286, -2)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-10/7, -10//7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> A good alternative is to use int() to truncate instead of floor division!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(-10/7)"
+   ]
   }
  ],
  "metadata": {
