--- a/DSA.ipynb
+++ b/DSA.ipynb
@@ -536,6 +536,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Truncation with int()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "> A good alternative is to use int() to truncate instead of floor division!"
    ]
   },
@@ -558,6 +565,98 @@
    "source": [
     "int(-10/7)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Remember that, in automated test cases, 1.0 is not 1, so use int() to truncate the division even if the division is equaly (the divisor is divisible)!!\n",
+    "\n",
+    "Test cases sometimes work testing the printed answer (string), not the number in the number type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"1.0\" == \"1\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### math.ceil\n",
+    "\n",
+    "math.ceil is useful when we need to get the quantity of groups, for example.\n",
+    "\n",
+    "Let's say that we need to form groups of 4 and need to know how many groups it will be necessary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.75"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 11 # number of persons\n",
+    "g = 4 # qunatity in each group\n",
+    "\n",
+    "11/4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "math.ceil(n/g)  # 3 groups -> 2 groups of 4, and one with 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
