almost done with new implementation using Decimal

--- a/DSA.ipynb
+++ b/DSA.ipynb
@@ -8,10 +8,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Mod operations"
+    "# Mod operations"
    ]
   },
   {
@@ -25,14 +34,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Questions"
+    "## Questions"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Question about how many coins of each value should it use or give as change"
+    "### Coin Change Machine\n",
+    "> Question about how many coins of each value should it use or give as change"
    ]
   },
   {
@@ -52,6 +62,14 @@
     "Output Format\n",
     "\n",
     "For each test case, print a single integer - the minimum number of coins Chef needs, to pay exactly X rupees. If it is impossible to pay X rupees in denominations of rupees 5 and 10 only, print -1."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">  This solution don't work with float numbers, as we can se in the test in the cell below (below 2 cells).   \n",
+    "> It returns -1, but it should return 2 coins of 0.50 and 1 of 0.10!"
    ]
   },
   {
@@ -91,6 +109,172 @@
     "else:\n",
     "    print(-1)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">  This solution don't work with float numbers, as we can se in the test in the cell below (below 2 cells).   \n",
+    "> It returns -1, but it should return 2 coins of 0.50 and 1 of 0.10!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 1.1\n",
+    "coins = [0.5, 0.25, 0.1]\n",
+    "coins = sorted(coins, reverse=True)\n",
+    "\n",
+    "if any( [ x%c==0 for c in coins] ):\n",
+    "    total = 0\n",
+    "    rest = x\n",
+    "    coin_i = 0\n",
+    "    for i in range(len(coins)):\n",
+    "        if rest%coins[i] == 0:\n",
+    "            coin_i = rest//coins[i]\n",
+    "            rest = (rest%coins[i])\n",
+    "\n",
+    "        print(f\"Coin {coins[i]}: {coin_i}\")\n",
+    "        total += coin_i\n",
+    "    \n",
+    "    print( f\"Total coins: {total}\" )\n",
+    "else:\n",
+    "    print(-1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Solution for float numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total coins: 2\n",
+      "Coin 0.50: 2\n",
+      "Coin 0.25: 0\n",
+      "Coin 0.10: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from decimal import Decimal, getcontext\n",
+    "# Set the precision to 30 digits\n",
+    "getcontext().prec = 30\n",
+    "\n",
+    "x = Decimal(\"1.11\")\n",
+    "\n",
+    "coins = [Decimal(\"0.50\"), Decimal(\"0.25\"), Decimal(\"0.10\")]\n",
+    "coins = sorted(coins, reverse=True)\n",
+    "\n",
+    "integer_part = Decimal( math.floor(x) )\n",
+    "float_part = x-integer_part\n",
+    "\n",
+    "def calc_change(money):\n",
+    "    total = 0\n",
+    "    rest = money\n",
+    "    coin_i = 0\n",
+    "    change = {}\n",
+    "    for i in range(len(coins)):\n",
+    "        if rest%coins[i] == 0:\n",
+    "            coin_i = rest//coins[i]\n",
+    "            rest = (rest%coins[i])\n",
+    "\n",
+    "        change[coins[i]] = int(coin_i)\n",
+    "        total += coin_i\n",
+    "    \n",
+    "    return total, change\n",
+    "\n",
+    "total, change = calc_change(integer_part)\n",
+    "\n",
+    "if float_part:\n",
+    "    total_float_part, change_float_part = calc_change(float_part)\n",
+    "\n",
+    "    total += total_float_part\n",
+    "    for k, v in change_float_part.items():\n",
+    "        change[k] += change_float_part[k]\n",
+    "\n",
+    "if total > 0:\n",
+    "    print( f\"Total coins: {total}\" )\n",
+    "\n",
+    "    for k,v in change.items():\n",
+    "        print(f\"Coin {k:.2f}: {v}\")\n",
+    "else:\n",
+    "    print(\"No change\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Decimal('0.01')"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Decimal(\"0.11\")%Decimal(\"0.1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Decimal('1')"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Decimal( math.floor(Decimal(\"1.11\")) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> In this case, with the quantity of coins available in the machine."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -320,6 +504,73 @@
     "    n = q\n",
     "    a.insert(0, r)\n",
     "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Reverse a number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54321"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = \"12345\"  #string\n",
+    "\n",
+    "l = list(n)\n",
+    "l = l[::-1]\n",
+    "\n",
+    "int(\"\".join(l))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54321\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 12345 #int\n",
+    "\n",
+    "# handle negative number\n",
+    "if n < 0:\n",
+    "    negative = True\n",
+    "    n = n*-1\n",
+    "else:\n",
+    "    negative = False\n",
+    "    \n",
+    "l = []\n",
+    "while n > 0:\n",
+    "    n, r = divmod(n, 10)\n",
+    "    l.append(str(r))\n",
+    "\n",
+    "result = int(\"\".join(l))\n",
+    "if negative:\n",
+    "    print(result*-1)\n",
+    "else:\n",
+    "    print(result)"
    ]
   },
   {
@@ -599,7 +850,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### math.ceil\n",
+    "# Math operations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## math.ceil\n",
     "\n",
     "math.ceil is useful when we need to get the quantity of groups, for example.\n",
     "\n",
@@ -652,11 +910,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## How to work with mmoney in Python\n",
+    "\n",
+    "> use Decimal!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000003.15\n"
+     ]
+    }
+   ],
+   "source": [
+    "from decimal import Decimal, getcontext\n",
+    "\n",
+    "# Set the precision to 30 digits\n",
+    "getcontext().prec = 30\n",
+    "\n",
+    "# Create Decimal numbers\n",
+    "\n",
+    "num1 = Decimal('10000000.17')\n",
+    "num2 = Decimal('2.98')\n",
+    "# Perform operations\n",
+    "result = num1 + num2\n",
+    "print(f\"{result:.2f}\")"
+   ]
   }
  ],
  "metadata": {
