--- a/DSA.ipynb
+++ b/DSA.ipynb
@@ -74,23 +74,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coin 13: 0\n",
       "Coin 10: 0\n",
-      "Coin 3: 0\n",
-      "Total coins: 0\n"
+      "Coin 5: 11\n",
+      "Total coins: 11\n"
      ]
     }
    ],
    "source": [
-    "x = 77\n",
-    "coins = [13, 10, 3]\n",
+    "# x = 77\n",
+    "x = 55\n",
+    "# coins = [13, 10, 3]\n",
+    "coins = [10, 5]\n",
+    "coins = sorted(coins, reverse=True)\n",
+    "\n",
+    "if any( [ x%c==0 for c in coins] ):\n",
+    "    total = 0\n",
+    "    rest = x\n",
+    "    coin_i = 0\n",
+    "    for i in range(len(coins)):\n",
+    "        if rest%coins[i] == 0:\n",
+    "            coin_i = rest//coins[i]\n",
+    "            rest = (rest%coins[i])\n",
+    "\n",
+    "        print(f\"Coin {coins[i]}: {coin_i}\")\n",
+    "        total += coin_i\n",
+    "    \n",
+    "    print( f\"Total coins: {total}\" )\n",
+    "else:\n",
+    "    print(-1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "refazer  esses códigos pois nao estao funcionando. misturei e confundi td"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# x = 77\n",
+    "x = 55\n",
+    "# coins = [13, 10, 3]\n",
+    "coins = [10, 5]\n",
     "coins = sorted(coins, reverse=True)\n",
     "\n",
     "if any( [ x%c==0 for c in coins] ):\n",
@@ -162,17 +208,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total coins: 2\n",
-      "Coin 0.50: 2\n",
-      "Coin 0.25: 0\n",
-      "Coin 0.10: 0\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[75], line 31\u001b[0m\n\u001b[0;32m     28\u001b[0m total, change \u001b[38;5;241m=\u001b[39m calc_change(integer_part)\n\u001b[0;32m     30\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m float_part:\n\u001b[1;32m---> 31\u001b[0m     total_float_part, change_float_part \u001b[38;5;241m=\u001b[39m \u001b[43mcalc_change\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfloat_part\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     33\u001b[0m     total \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m total_float_part\n\u001b[0;32m     34\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m change_float_part\u001b[38;5;241m.\u001b[39mitems():\n",
+      "Cell \u001b[1;32mIn[75], line 23\u001b[0m, in \u001b[0;36mcalc_change\u001b[1;34m(money)\u001b[0m\n\u001b[0;32m     20\u001b[0m         coin_i \u001b[38;5;241m=\u001b[39m rest\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39mcoins[i]\n\u001b[0;32m     21\u001b[0m         rest \u001b[38;5;241m=\u001b[39m (rest\u001b[38;5;241m%\u001b[39mcoins[i])\n\u001b[1;32m---> 23\u001b[0m     change[coins[i]] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m(coin_i)\n\u001b[0;32m     24\u001b[0m     total \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m coin_i\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m total, change\n",
+      "Cell \u001b[1;32mIn[75], line 23\u001b[0m, in \u001b[0;36mcalc_change\u001b[1;34m(money)\u001b[0m\n\u001b[0;32m     20\u001b[0m         coin_i \u001b[38;5;241m=\u001b[39m rest\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39mcoins[i]\n\u001b[0;32m     21\u001b[0m         rest \u001b[38;5;241m=\u001b[39m (rest\u001b[38;5;241m%\u001b[39mcoins[i])\n\u001b[1;32m---> 23\u001b[0m     change[coins[i]] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m(coin_i)\n\u001b[0;32m     24\u001b[0m     total \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m coin_i\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m total, change\n",
+      "File \u001b[1;32m_pydevd_bundle/pydevd_cython.pyx:1457\u001b[0m, in \u001b[0;36m_pydevd_bundle.pydevd_cython.SafeCallWrapper.__call__\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32m_pydevd_bundle/pydevd_cython.pyx:701\u001b[0m, in \u001b[0;36m_pydevd_bundle.pydevd_cython.PyDBFrame.trace_dispatch\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32m_pydevd_bundle/pydevd_cython.pyx:1395\u001b[0m, in \u001b[0;36m_pydevd_bundle.pydevd_cython.PyDBFrame.trace_dispatch\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32m_pydevd_bundle/pydevd_cython.pyx:1344\u001b[0m, in \u001b[0;36m_pydevd_bundle.pydevd_cython.PyDBFrame.trace_dispatch\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32m_pydevd_bundle/pydevd_cython.pyx:312\u001b[0m, in \u001b[0;36m_pydevd_bundle.pydevd_cython.PyDBFrame.do_wait_suspend\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\Users\\rhuan\\.pyenv\\pyenv-win\\versions\\3.10.11\\lib\\site-packages\\debugpy\\_vendored\\pydevd\\pydevd.py:2070\u001b[0m, in \u001b[0;36mPyDB.do_wait_suspend\u001b[1;34m(self, thread, frame, event, arg, exception_type)\u001b[0m\n\u001b[0;32m   2067\u001b[0m             from_this_thread\u001b[38;5;241m.\u001b[39mappend(frame_custom_thread_id)\n\u001b[0;32m   2069\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_threads_suspended_single_notification\u001b[38;5;241m.\u001b[39mnotify_thread_suspended(thread_id, thread, stop_reason):\n\u001b[1;32m-> 2070\u001b[0m         keep_suspended \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_do_wait_suspend\u001b[49m\u001b[43m(\u001b[49m\u001b[43mthread\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mframe\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mevent\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43marg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msuspend_type\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfrom_this_thread\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mframes_tracker\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   2072\u001b[0m frames_list \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   2074\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m keep_suspended:\n\u001b[0;32m   2075\u001b[0m     \u001b[38;5;66;03m# This means that we should pause again after a set next statement.\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\rhuan\\.pyenv\\pyenv-win\\versions\\3.10.11\\lib\\site-packages\\debugpy\\_vendored\\pydevd\\pydevd.py:2106\u001b[0m, in \u001b[0;36mPyDB._do_wait_suspend\u001b[1;34m(self, thread, frame, event, arg, suspend_type, from_this_thread, frames_tracker)\u001b[0m\n\u001b[0;32m   2103\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_call_input_hook()\n\u001b[0;32m   2105\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprocess_internal_commands()\n\u001b[1;32m-> 2106\u001b[0m     \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0.01\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m   2108\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcancel_async_evaluation(get_current_thread_id(thread), \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28mid\u001b[39m(frame)))\n\u001b[0;32m   2110\u001b[0m \u001b[38;5;66;03m# process any stepping instructions\u001b[39;00m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -194,7 +250,7 @@
     "    rest = money\n",
     "    coin_i = 0\n",
     "    change = {}\n",
-    "    for i in range(len(coins)):\n",
+    "    for i in range(len(coins)):  #if rest == 0 can break #test later\n",
     "        if rest%coins[i] == 0:\n",
     "            coin_i = rest//coins[i]\n",
     "            rest = (rest%coins[i])\n",
@@ -224,22 +280,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Decimal('0.01')"
+       "(Decimal('1'), Decimal('0.01'))"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Decimal(\"0.11\")%Decimal(\"0.1\")"
+    "Decimal(\"0.11\")//Decimal(\"0.1\"), Decimal(\"0.11\")%Decimal(\"0.1\")"
    ]
   },
   {
@@ -260,6 +316,26 @@
    ],
    "source": [
     "Decimal( math.floor(Decimal(\"1.11\")) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "55%50"
    ]
   },
   {
@@ -944,6 +1020,147 @@
     "# Perform operations\n",
     "result = num1 + num2\n",
     "print(f\"{result:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Velocity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Police and Thief\n",
+    "\n",
+    "[Link](https://www.codechef.com/practice/course/logical-problems/DIFF800/problems/POLTHIEF?tab=statement)\n",
+    "\n",
+    "Chef discovered that his secret recipe has been stolen. He immediately informs the police of the theft.\n",
+    "\n",
+    "It is known that the policeman and thief move on the number line. You are given that:\n",
+    "\n",
+    "-   The initial location of the policeman on the number line is XX and his speed is 22 units per second.\n",
+    "-   The initial location of the thief on the number line is YY and his speed is 11 unit per second.\n",
+    "\n",
+    "Find the **minimum** time (in seconds) in which the policeman can catch the thief. Note that, the policeman catches the thief as soon as their locations become equal and the thief will try to evade the policeman for as long as possible.\n",
+    "\n",
+    "### Input Format\n",
+    "\n",
+    "-   The first line of input will contain an integer TT --- the number of test cases. The description of TT test cases follows.\n",
+    "-   The first and only line of each test case contains two integers XX and YY, as described in the problem statement.\n",
+    "\n",
+    "### Output Format\n",
+    "\n",
+    "For each test case, output in a single line the minimum time taken by the policeman to catch the thief.\n",
+    "\n",
+    "### Constraints\n",
+    "\n",
+    "-   1≤T≤10001≤T≤1000\n",
+    "-   -105≤X,Y≤105-105≤X,Y≤105\n",
+    "\n",
+    "### Sample 1:\n",
+    "\n",
+    "Input\n",
+    "```\n",
+    "3\n",
+    "1 3\n",
+    "2 1\n",
+    "1 1\n",
+    "```\n",
+    "\n",
+    "Output\n",
+    "```\n",
+    "2\n",
+    "1\n",
+    "0\n",
+    "```\n",
+    "\n",
+    "### Explanation:\n",
+    "\n",
+    "**Test case 11**: The initial locations of the policeman and thief are 11 and 33 respectively. The minimum time taken by the policeman to catch the thief is 22 seconds, and this happens when both the policeman and the thief move towards the right.\n",
+    "\n",
+    "**Test case 22**: The initial location of the policeman and thief are 22 and 11 respectively. The minimum time taken by the policeman to catch the thief is 11 second, and this happens when both the policeman and the thief move towards the left.\n",
+    "\n",
+    "**Test case 33**: The initial locations of the policeman and thief are 11 and 11 respectively. Because the police is already present at the location of thief, the time taken by police to catch the thief is 00 seconds."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 1\n",
+    "x_vel =2\n",
+    "\n",
+    "y = 2\n",
+    "y_vel = 1\n",
+    "\n",
+    "relative_vel = abs(x_vel - y_vel)\n",
+    "\n",
+    "if x > y:\n",
+    "    t = (x-y)/relative_vel\n",
+    "    \n",
+    "elif x == y:\n",
+    "    t = 0\n",
+    "else:\n",
+    "    t = (y-x)/relative_vel\n",
+    "\n",
+    "print(int(t))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When solving this problem, the concept of calculating the time using relative speed is grounded in basic physics, specifically from **kinematics** (the study of motion). Here's a breakdown:\n",
+    "\n",
+    "1. **Relative Speed**:\n",
+    "- In physics, when two objects move towards or away from each other, you calculate their relative speed by subtracting their velocities if they’re moving in the same direction.\n",
+    "  \n",
+    "- In this case, the **policeman** moves faster than the **thief**, so their relative speed is the difference between their speeds:\n",
+    "\n",
+    "$$\n",
+    "v_{\\text{relative}} = v_{\\text{policeman}} - v_{\\text{thief}}\n",
+    "$$\n",
+    "\n",
+    "This is a common concept in problems involving two objects in motion on the same path.\n",
+    "\n",
+    "2. **Instantaneous Speed Formula**:\n",
+    "- The general formula to find **time** in uniform motion is:\n",
+    "\n",
+    "$$\n",
+    "\\text{Time} = \\frac{\\text{Distance}}{\\text{Speed}}\n",
+    "$$\n",
+    "\n",
+    "This comes from the basic relationship between distance, speed, and time:\n",
+    "\n",
+    "$$\n",
+    "\\text{Distance} = \\text{Speed} \\times \\text{Time}\n",
+    "$$\n",
+    "\n",
+    "If you rearrange this equation, you can solve for time:\n",
+    "\n",
+    "$$\n",
+    "\\text{Time} = \\frac{\\text{Distance}}{\\text{Speed}}\n",
+    "$$\n",
+    "\n",
+    "3. **Applying It**:\n",
+    "In this case, the \"distance\" is the gap between the policeman and the thief (i.e., \\( |X - Y| \\)), and the speed is the **relative speed** between them. This is why the time is calculated as:\n",
+    "\n",
+    "$$\n",
+    "T = \\frac{|X - Y|}{v_{\\text{relative}}}\n",
+    "$$\n"
    ]
   }
  ],
