questions about groups

--- a/DSA.ipynb
+++ b/DSA.ipynb
@@ -393,7 +393,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Questions about digits\n",
+    "### Questions about digits\n",
     "\n",
     "> You should take care of negative numbers!!\n",
     "\n",
@@ -586,7 +586,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Reverse a number"
+    "### Reverse a number"
    ]
   },
   {
@@ -653,12 +653,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Time convertions"
+    "### Time convertions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -672,6 +672,7 @@
    "source": [
     "total_seconds = 186_399\n",
     "seconds = total_seconds % 60\n",
+    "\n",
     "minutes = total_seconds // 60 % 60\n",
     "hours = total_seconds // 60 // 60 % 24\n",
     "days = total_seconds // 60 // 60 // 24\n",
@@ -683,7 +684,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Mod of negative numbers\n",
+    "### Mod of negative numbers\n",
     "\n",
     "$a \\mod b = a - b \\times \\left\\lfloor \\frac{a}{b} \\right\\rfloor$\n",
     "\n",
@@ -814,7 +815,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Floor division\n",
+    "### Floor division\n",
     "\n",
     "The floor division of negative numbers could return a number that we are not expecting!"
    ]
@@ -863,7 +864,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Truncation with int()"
+    "### Truncation with int()"
    ]
   },
   {
@@ -926,41 +927,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Math operations"
+    "### Questions about quantity of groups\n",
+    "\n",
+    "This questions want to know how many groups of N it should have, but some times there is a remainder.  \n",
+    "There is 2 types of questions in relation of how to handle this.\n",
+    "- the remainder is put alone in one group (leving space in it) or\n",
+    "> We use math.ceil(x/n) to round up to\n",
+    "- the just want to know the quantity of remainder to do something else.\n",
+    "> We use mod to get the remainder x%n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## math.ceil\n",
-    "\n",
     "math.ceil is useful when we need to get the quantity of groups, for example.\n",
     "\n",
     "Let's say that we need to form groups of 4 and need to know how many groups it will be necessary."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.75"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "n = 11 # number of persons\n",
-    "g = 4 # qunatity in each group\n",
-    "\n",
-    "11/4"
    ]
   },
   {
@@ -986,10 +969,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.75"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 11 # number of persons\n",
+    "g = 4 # qunatity in each group\n",
+    "\n",
+    "n/g"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to work with mmoney in Python\n",
+    "# How to work with money in Python\n",
     "\n",
     "> use Decimal!"
    ]
@@ -1041,15 +1047,15 @@
     "\n",
     "It is known that the policeman and thief move on the number line. You are given that:\n",
     "\n",
-    "-   The initial location of the policeman on the number line is XX and his speed is 22 units per second.\n",
-    "-   The initial location of the thief on the number line is YY and his speed is 11 unit per second.\n",
+    "-   The initial location of the policeman on the number line is X and his speed is 2 units per second.\n",
+    "-   The initial location of the thief on the number line is Y and his speed is 1 unit per second.\n",
     "\n",
     "Find the **minimum** time (in seconds) in which the policeman can catch the thief. Note that, the policeman catches the thief as soon as their locations become equal and the thief will try to evade the policeman for as long as possible.\n",
     "\n",
     "### Input Format\n",
     "\n",
-    "-   The first line of input will contain an integer TT --- the number of test cases. The description of TT test cases follows.\n",
-    "-   The first and only line of each test case contains two integers XX and YY, as described in the problem statement.\n",
+    "-   The first line of input will contain an integer T --- the number of test cases. The description of T test cases follows.\n",
+    "-   The first and only line of each test case contains two integers X and Y, as described in the problem statement.\n",
     "\n",
     "### Output Format\n",
     "\n",
